--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/records_card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_horizontal_margin"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    app:cardBackgroundColor="@color/cardViewBackground">
-    <!-- height = 2(records_set_item.height) -->
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <com.example.kevin.fifastatistics.views.cards.RecordsCardView
-        android:id="@+id/recordscardview"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.kevin.fifastatistics.viewmodels.RecordsCardViewModel" />
+    </data>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/records_card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.example.kevin.fifastatistics.views.cards.RecordsCardView>
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        card_view:cardCornerRadius="@dimen/card_corner_radius"
+        app:cardBackgroundColor="@color/cardViewBackground">
 
+        <LinearLayout
+            android:id="@+id/records_card_view_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</android.support.v7.widget.CardView>
+            <include
+                layout="@layout/records_set_item"
+                android:id="@+id/match_records"
+                bind:viewModel="@{viewModel.matches}"
+                bind:headerLeft="@{@string/matches}">
+            </include>
+
+            <include
+                layout="@layout/records_set_item"
+                android:id="@+id/series_records"
+                bind:viewModel="@{viewModel.series}"
+                bind:headerLeft="@{@string/series}">
+            </include>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</layout>
