--- a/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
@@ -1,24 +1,43 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.example.kevin.fifastatistics.fragments.PlayerOverviewFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.kevin.fifastatistics.viewmodels.UserOverviewViewModel"/>
+        <variable
+            name="progressViewModel"
+            type="com.example.kevin.fifastatistics.viewmodels.ProgressFragmentViewModel"/>
+    </data>
 
-        <LinearLayout
+    <FrameLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         tools:context="com.example.kevin.fifastatistics.fragments.PlayerOverviewFragment">
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:descendantFocusability="blocksDescendants">
+            android:layout_height="match_parent">
 
-            <include layout="@layout/user_overview_data"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:descendantFocusability="blocksDescendants">
 
-        </LinearLayout>
+                <include layout="@layout/user_overview_data_layout"
+                    bind:viewModel="@{viewModel}"/>
 
-    </android.support.v4.widget.NestedScrollView>
+            </LinearLayout>
 
-</FrameLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+        <include
+            layout="@layout/progress"
+            bind:progressViewModel="@{progressViewModel}"/>
+
+    </FrameLayout>
+
+</layout>
