--- a/app/src/main/res/layouts/shared/layout/floating_action_menu.xml
+++ b/app/src/main/res/layouts/shared/layout/floating_action_menu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.clans.fab.FloatingActionMenu
-    android:id="@+id/fab_menu"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_gravity="bottom|end"
-    fab:menu_colorNormal="@color/colorAccent"
-    fab:menu_icon="@drawable/ic_add_white_24dp"
-    fab:menu_labels_showAnimation="@anim/fab_scale_up"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto">
 
-</com.github.clans.fab.FloatingActionMenu>
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_gravity="bottom|end"
+        fab:menu_colorNormal="@color/colorAccent"
+        fab:menu_icon="@drawable/ic_add_white_24dp"
+        fab:menu_labels_showAnimation="@anim/fab_scale_up" />
+
+</layout>
