--- a/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
@@ -11,13 +11,15 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/stats_chart_title"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center_vertical"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -32,7 +34,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stats_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:nestedScrollingEnabled="false">
