--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="status_bar_height">24dp</dimen>
     <dimen name="search_item_size">48dp</dimen>
     <dimen name="search_list_item_height">72dp</dimen>
+    <dimen name="shutter_size">45dp</dimen>
 
     <dimen name="civ_border_width">4dp</dimen>
     <dimen name="progress_loader_item_margin">5dp</dimen>
@@ -27,7 +28,7 @@
     <dimen name="team_item_vertical_margin">10dp</dimen>
     <dimen name="team_item_logo_size">30dp</dimen>
     <dimen name="match_team_logo_size">20dp</dimen>
-    <dimen name="shutter_button_margin">25dp</dimen>
+    <dimen name="shutter_button_margin">12dp</dimen>
 
     <dimen name="friends_fragment_image_height">130dp</dimen>
 
