--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,6 +7,11 @@
         android:defaultValue="false"/>
 
     <SwitchPreference
+        android:key="@string/teamAsColor"
+        android:title="@string/pref_team_color_as_accent"
+        android:defaultValue="false"/>
+
+    <SwitchPreference
         android:key="@string/openToCamera"
         android:title="@string/pref_direct_camera"
         android:summary="@string/pref_direct_camera_desc"
