--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="white_pressed">#f1f1f1</color>
     <color name="half_black">#808080</color>
     <color name="black_semi_transparent">#B2000000</color>
+    <color name="black_tint">#50000000</color>
 
     <color name="material_drawer_dark_selected_text">#4CAF50</color>
 
