--- a/app/src/main/res/layouts/activities/layout/activity_player.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_player.xml
@@ -18,7 +18,6 @@
                 android:id="@+id/collapsingtoolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways">
 
@@ -48,20 +47,9 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/fab_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_gravity="bottom|end"
-            fab:menu_colorNormal="@color/colorAccent"
-            fab:menu_colorPressed="@color/colorAccentDark"
-            fab:menu_icon="@drawable/ic_add_white_24dp"
-            app:layout_behavior=".views.ActionMenuBehavior"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:fab="http://schemas.android.com/apk/res-auto">
-        </com.github.clans.fab.FloatingActionMenu>
+        <include
+            android:id="@+id/fam_layout"
+            layout="@layout/floating_action_menu"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
