--- a/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <ScrollView
+            android:id="@+id/scrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none">
