--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#262523</color>
     <color name="colorPrimaryDark">#181715</color>
     <color name="colorPrimaryDarkTranslucent">#B2181715</color>
+    <color name="colorPrimaryDarkTranslucenter">#92181715</color>
     <color name="colorAccent">#00c763</color>
     <color name="colorAccentDark">#00ac56</color>
     <color name="blue">#3F51B5</color>
