--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_button_margin">4dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="g_top_margin">100dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
