--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
 
     <dimen name="civ_border_width">4dp</dimen>
     <dimen name="progress_loader_item_margin">5dp</dimen>
+    <dimen name="retry_icon_size">48dp</dimen>
     <dimen name="stats_list_item_height">60dp</dimen>
     <dimen name="match_player_margin_internal">10dp</dimen>
     <dimen name="match_player_margin_external">12dp</dimen>
