--- a/app/src/main/res/layouts/shared/layout/item_match.xml
+++ b/app/src/main/res/layouts/shared/layout/item_match.xml
@@ -15,7 +15,7 @@
         android:paddingEnd="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         android:background="?android:attr/selectableItemBackground"
-        android:onClick="@{() -> matchItemViewModel.openEventDetail()}">
+        android:onClick="@{(v) -> matchItemViewModel.openEventDetail(v)}">
 
         <include
             layout="@layout/item_match_result"
