--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+        xmlns:bind="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -21,36 +19,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:textAppearance="@style/text_bold_grey_small"
             android:text="@string/records"/>
 
         <include
             layout="@layout/records_card_view"
             bind:viewModel="@{viewModel.records}"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/stats"/>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/stats_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardBackgroundColor="@color/cardViewBackground">
-
-            <com.example.kevin.fifastatistics.views.StatsViewPager
-                android:id="@+id/card_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                bind:stats="@{viewModel.stats}"
-                bind:title="@{viewModel.name}"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-        </android.support.v7.widget.CardView>
+        <include
+            layout="@layout/card_stats"
+            bind:stats="@{viewModel.stats}"
+            bind:title="@{viewModel.name}"/>
 
     </LinearLayout>
 
