--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="white">#FFFFFF</color>
     <color name="background">#212121</color>
     <color name="transparent">#00000000</color>
+    <color name="error">@android:color/holo_red_light</color>
 
     <!-- Card view colors -->
     <color name="cardViewBackground">#262523</color>
