--- a/app/src/main/res/layouts/shared/layout/fragment_match_update.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_match_update.xml
@@ -23,8 +23,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:orientation="vertical"
-                android:descendantFocusability="blocksDescendants">
+                android:orientation="vertical">
+
+                <include
+                    android:id="@+id/card_update_stats_layout"
+                    layout="@layout/card_update_stats"
+                    bind:viewModel="@{viewModel.updateStatsCardViewModel}" />
 
             </LinearLayout>
 
