--- a/app/src/main/res/layouts/shared/layout/item_stat_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_stat_update.xml
@@ -11,7 +11,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        >
 
         <TextView
             android:id="@+id/stat_for_textview"
